@@ -2,13 +2,14 @@
 Hash: SHA256
 
 DIST sass-3.1.0.alpha.252.gem 207360 RMD160 9890d1af2fe266daa4c2d3bfb4f2f7251e207532 SHA1 a12baacc1d61e68bebce5baca2b67912925195e6 SHA256 b8691950c1023df50cc919e77b65832451a39af863a8a6e7b6af6a43e6f47c91
+EBUILD sass-3.1.0_alpha_p252-r1.ebuild 841 RMD160 aeadd6de21a995d4f6801fcdffbc92eb0d048abb SHA1 9238f1822eeda61b250781de9cedada07250ddf5 SHA256 dd92a594bc859ffc9689b793ca24dbf652f217491697761c6223585d89795dd8
 EBUILD sass-3.1.0_alpha_p252.ebuild 833 RMD160 0184cb71c15cf4afd11e43ddd66b11c3845d5c83 SHA1 b79a4179b3d82ddbec1c2b764b6f3b2e0511b0f9 SHA256 8d11daec9271babf033ec10279ee7ae9334ab2b76c86f92af4771919b3573d4a
-MISC ChangeLog 269 RMD160 919c6fbb610156f562ba168c535cf39acad6b064 SHA1 aaebe09d9443fa96671bf28aa58c2e8b9f5dde15 SHA256 a4f8eb34f9dd98b2fcf8e4619ad6e0ba04e4e4d8f86f8973a99fe309c56b17bb
+MISC ChangeLog 421 RMD160 5b7fc05ba6cd23127bf863cd4b0f4055526ab45e SHA1 94e2691668e0ef460590a34cfd4a173f03d362bb SHA256 3ecb85d62c767ff47aee5848e1a52ed6d80ca072b2fdbc1eb83642c22b04c90f
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2a5/8ACgkQrnu0mw69JkqJFQD/bmDAhdmm12hgvFNRRvhyOy/0
-qW9Sy8ePHkgKG5iaCIgA/iEPihuNDgShrBYBjRtBDOkB5j1FkMbC6pcPAgfhQ695
-=1pd8
+iF4EAREIAAYFAk2bKMMACgkQrnu0mw69JkopNwD/cwhQd/AAeDzYGR/hOlrc8pbC
+FUr0OjJPdZ0fEvlTelsA/iCKAyYn+bSFtBlA3vXwh057ewcUHT4SyuzxQ9kKTbN4
+=U6gi
 -----END PGP SIGNATURE-----
